fixed heapbox styling and spacing

--- a/sass/_GarticleGrid.scss
+++ b/sass/_GarticleGrid.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: auto;
   margin-bottom: 2%;
+  padding-top: 32px;
   
 }
 
