--- a/themes/midnight_blue.css
+++ b/themes/midnight_blue.css
@@ -15,21 +15,23 @@ outline: none;
 
 .heapBox.disabled .holder
 {
-color:#FFBC46;
+color:#4D647C;
 }
 
 
 .heapBox a{
 text-decoration:none;
 color:#fff;
-font-family: Open Sans;
+font-family: 'Open Sans', 'Arial', sans-serif; 
+font-weight: 100;
+font-style: normal;
 }
 
 .heapBox .holder
 {
 width:150px;
 overflow:hidden;
-background:#f39c12;
+background:#2c3e50;
 text-indent:20px;
 height:35px;
 }
@@ -37,7 +39,7 @@ height:35px;
 .heapBox .handler
 {
 width:25px;
-background:#f39c12 url(gfx/heapbox_handler_bg.jpg);
+background:#2c3e50 url(../gfx/heapbox_handler_bg.jpg);
 height:35px;
 }
 
@@ -73,10 +75,10 @@ position:relative;
 display:block;
 width:100%;
 height:15px;
-background:#f39c12 url(gfx/slider_arrow_up.png);
+background:#2c3e50 url(../gfx/slider_arrow_up.png);
 background-repeat:no-repeat;
 background-position:center center;
-border-bottom:1px solid #d18814;
+border-bottom:1px solid #17212a;
 position:absolute;
 top:0px;
 z-index:30;
@@ -87,10 +89,10 @@ z-index:30;
 display:block;
 width:100%;
 height:15px;
-background:#f39c12 url(gfx/slider_arrow_down.png);
+background:#2c3e50 url(../gfx/slider_arrow_down.png);
 background-repeat:no-repeat;
 background-position:center center;
-border-top:1px solid #d18814;
+border-top:1px solid #17212a;
 position:absolute;
 bottom:0px;
 z-index:30;
@@ -102,24 +104,23 @@ z-index:20;
 position:relative;
 display:block;
 height:35px;
-font-family: Open Sans;
 }
 
 .heapBox .heap .heapOptions .heapOption a{
 width:100%;
 display:block;
-background:#f39c12;
+background:#2c3e50;
 text-indent:20px;
 }
 
 .heapBox .heap .heapOptions .heapOption a:hover{
-background:#d18814;
+background:#17212a;
 }
 
 .heapBox .heap .heapOptions .heapOption a.selected{
-background:#d18814;
+background:#17212a;
 }
 
 .heapBox .heap .heapOptions .heapOption a.disabled{
-	color:#F6BB5A;
+	color:#48647F;
 }
